--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TwitterClient</string>
+
+    <string name="login.error.message"> Imposible iniciar sesion %s </string>
+    <string name="main.header.images">Imágenes</string>
+    <string name="main.header.hashtags">HAshTags</string>
+    <string name="main.menu.action.logout">Cerrar sesión</string>
 </resources>
